@@ -71,6 +71,8 @@ Version 0.6
 - the wrappers have no class attributes that make it possible to
   swap out the dict and list types it uses.
 - werkzeug debugger should work on the appengine dev server now.
+- the URL builder supports dropping of unexpected arguments now.
+  Previously they were always appended to the URL as query string.
 
 Version 0.5.1
 -------------
